sort.basic.cocktail.AlgCocktailSort1.scala.error
Compilation error:
AlgCocktailSort1:6: error: not found: value compte
      echange(i,i+1); compt = compte + 1;
                              ^