sort.basic.cocktail.AlgCocktailSort1.scala.code
def cocktailSort() {
  var compt : Int = 0
  for (i<- 0 to getNombreValeurs()-2) {
    if (plusPetit(i+1,i)) {
      echange(i,i+1); compt = compte + 1;
    }
  }
  if (compt != 0) {
    for (i<- 0 to getNombreValeurs()-2 ; j<- 0 to getNombreValeurs()-2-i ) {
    	if (plusPetit(j+1,j)) {
    		echange(j,j+1);
    	}    
  	}
  }
}

